--- a/src/main/resources/templates/share/layout.html
+++ b/src/main/resources/templates/share/layout.html
@@ -2,7 +2,6 @@
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
 <head>
-	<script th:src="@{/js/echarts.min.js}"></script>
     <meta charset="utf-8"/>
     <title>首页</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
@@ -15,6 +14,7 @@
     </script>
     <!-- import css -->
     <link rel="stylesheet" th:href="@{/css/index.css}">
+    <!--<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">-->
     <link rel="stylesheet" th:href="@{/css/main.css}">
 
     <style type="text/css">
