--- a/src/main/resources/templates/task/taskList.html
+++ b/src/main/resources/templates/task/taskList.html
@@ -50,7 +50,7 @@
                 </el-table-column>
                 <el-table-column  label="操作" width="100px">
                     <template slot-scope="scope" >
-                        <a v-bind:href="'/task/taskAdd?id='+scope.row.model.taskid" class="svg-a" title="编辑">
+                        <a v-bind:href="contextRoot+'task/taskAdd?id='+scope.row.model.taskid" class="svg-a" title="编辑">
                             <svg class="icon" aria-hidden="true">
                                 <use xlink:href="#icon-edtor"></use>
                             </svg>
@@ -67,7 +67,7 @@
 
         <el-dialog
                 :visible.sync="dialogVisible"
-                width="30%">
+                width="50%">
             <div v-if="dialogModel">
                 <el-row>
                     <el-col :span="24">
@@ -231,6 +231,7 @@
         var app = new Vue({
             el: '#app',
             data: {
+                contextRoot:contextRoot,
                 pageModel:[],
                 searchContent:'', /*查询参数：用户单位名称*/
                 currentPage:1,
