--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <!-- import CSS -->
-    <link rel="stylesheet" th:href="@{/css/index.css}"
-          href="https://cdn.bootcss.com/element-ui/2.0.7/theme-chalk/index.css">
-    <link rel="stylesheet" th:href="@{/css/main.css}" href="/css/main.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/element-ui/2.0.7/theme-chalk/index.css">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
     <!-- 引入样式 -->
     <title>登录</title>
 
@@ -52,7 +51,6 @@
                                  th:method="post"
                                  >
                             <input type='hidden' name='_csrf' th:value="${_csrf.token}"/>
-                            <!-- 使用单点登录 登录系统的时候，需要将此行代码注释掉 -->
                             <input type='hidden' name='return' th:value="${returnurl}"/>
                             <div style="margin-bottom: 12px;color:red;" th:text="${MSG}"></div>
                             <div style="margin-bottom: 12px;color:red;" th:if="${param.error}"
@@ -81,42 +79,25 @@
                                 </el-input>
                             </el-form-item>
                             <el-form-item>
-                                <!--<el-button type="submit" @click="submitForm('ruleForm2')" class="login-btn">登录</el-button>-->
                                 <button type="submit" class="el-button login-btn el-button--submit cur"><span>登录</span>
                                 </button>
                                 <input type='hidden' name='time'/>
                                 <input type='hidden' name='md5'/>
 
                             </el-form-item>
-                            <!-- <div  class="forget-a"><a href="#">忘记密码</a></div>-->
                         </el-form>
                     </el-tab-pane>
-                    <!--<el-tab-pane label="注册" name="second">
-                      <el-form  label-width="0" class="login-form">
-                        <el-form-item label="用户名">
-                          <el-input></el-input>
-                        </el-form-item>
-                        <el-form-item label="密码">
-                          <el-input type="password"></el-input>
-                        </el-form-item>
-                        <el-form-item label="验证码">
-                          <el-input></el-input>
-                        </el-form-item>
-                        <el-form-item>
-                          <el-button type="primary" @click="submitForm('ruleForm2')" class="login-btn">注册</el-button>
-                        </el-form-item>
-                      </el-form>
-                    </el-tab-pane>-->
                 </el-tabs>
             </div>
         </div>
     </div>
 </div>
 <!-- import Vue before Element -->
-<script th:src="@{/js/jquery.min.js}"></script>
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script th:src="@{/js/iconfont.js}"></script>
-<script th:src="@{/js/vue.js}" src="https://cdn.bootcss.com/vue/2.5.16/vue.js"></script>
-<script th:src="@{/js/index.js}"></script>
+<script src="https://cdn.bootcss.com/vue/2.5.21/vue.min.js"></script>
+<script src="https://unpkg.com/element-ui/lib/index.js"></script>
+
 <script type="text/javascript"> var contextRoot = "[[@{/}]]"; </script>
 
 <script>
