--- a/src/main/resources/templates/share/layout.html
+++ b/src/main/resources/templates/share/layout.html
@@ -13,8 +13,8 @@
         var contextRoot = "[[@{/}]]";
     </script>
     <!-- import css -->
-    <link rel="stylesheet" th:href="@{/css/index.css}">
-    <!--<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">-->
+    <!--<link rel="stylesheet" th:href="@{/css/index.css}">-->
+    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
     <link rel="stylesheet" th:href="@{/css/main.css}">
 
     <style type="text/css">
@@ -23,10 +23,13 @@
         }
     </style>
 
-    <script th:src="@{/js/jquery.min.js}"></script>
+    <!--<script th:src="@{/js/jquery.min.js}"></script>-->
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script th:src="@{/js/iconfont.js}"></script>
-    <script th:src="@{/js/vue.js}"></script>
-    <script th:src="@{/js/index.js}"></script>
+    <!--<script th:src="@{/js/vue.js}"></script>-->
+    <!--<script th:src="@{/js/index.js}"></script>-->
+    <script src="https://cdn.bootcss.com/vue/2.5.21/vue.min.js"></script>
+    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
     <script th:src="@{/js/base.js}"></script>
 </head>
 <body>
