--- a/src/main/resources/templates/task/taskAdd.html
+++ b/src/main/resources/templates/task/taskAdd.html
@@ -3,7 +3,8 @@
 
 <head>
 
-    <link rel="stylesheet" th:href="@{/third/editor.md/css/editormd.min.css}" />
+    <!--<link rel="stylesheet" th:href="@{/third/editor.md/css/editormd.min.css}" />-->
+    <link rel="stylesheet" href="http://pandao.github.io/editor.md/css/editormd.css" />
 
 </head>
 <body>
@@ -141,7 +142,9 @@
 
 <div layout:fragment="jscontent">
 
-    <script th:src="@{/third/editor.md/editormd.min.js}"></script>
+    <!--<script th:src="@{/third/editor.md/editormd.min.js}"></script>-->
+    <script src="http://pandao.github.io/editor.md/editormd.min.js"></script>
+
     <script>
     	
     	var loadProjectList = function(val){
