--- a/src/main/resources/templates/task/taskList.html
+++ b/src/main/resources/templates/task/taskList.html
@@ -10,8 +10,8 @@
         .el-table .NoIdeaRow{background:#afafaf;}
         .el-table .cell{color:black;}
     </style>
-    <!--<link rel="stylesheet" th:href="@{/third/editor.md/css/editormd.preview.min.css}" />-->
-    <link rel="stylesheet" href="http://pandao.github.io/editor.md/css/editormd.preview.css" />
+    <link rel="stylesheet" th:href="@{/third/editor.md/css/editormd.preview.min.css}" />
+    <!--<link rel="stylesheet" href="http://pandao.github.io/editor.md/css/editormd.preview.css" />-->
 
 </head>
 <body>
@@ -118,27 +118,27 @@
 
 <div layout:fragment="jscontent">
 
-    <!--<script th:src="@{/third/editor.md/lib/marked.min.js}"></script>-->
-    <!--<script th:src="@{/third/editor.md/lib/prettify.min.js}"></script>-->
-    <!--<script th:src="@{/third/editor.md/lib/raphael.min.js}"></script>-->
-    <!--<script th:src="@{/third/editor.md/lib/underscore.min.js}"></script>-->
+    <script th:src="@{/third/editor.md/lib/marked.min.js}"></script>
+    <script th:src="@{/third/editor.md/lib/prettify.min.js}"></script>
+    <script th:src="@{/third/editor.md/lib/raphael.min.js}"></script>
+    <script th:src="@{/third/editor.md/lib/underscore.min.js}"></script>
     <!--<script th:src="@{/third/editor.md/lib/sequence-diagram.min.js}"></script>-->
     <!--<script th:src="@{/third/editor.md/lib/flowchart.min.js}"></script>-->
     <!--<script th:src="@{/third/editor.md/lib/jquery.flowchart.min.js}"></script>-->
 
     <!--<script th:src="@{/third/editor.md/jquery.min.js}"></script>-->
-    <!--<script th:src="@{/third/editor.md/editormd.min.js}"></script>-->
+    <script th:src="@{/third/editor.md/editormd.min.js}"></script>
 
-    <script src="http://pandao.github.io/editor.md/lib/marked.min.js"></script>
-    <script src="http://pandao.github.io/editor.md/lib/prettify.min.js"></script>
-    <script src="http://pandao.github.io/editor.md/lib/raphael.min.js"></script>
-    <script src="http://pandao.github.io/editor.md/lib/underscore.min.js"></script>
-    <script src="http://pandao.github.io/editor.md/lib/sequence-diagram.min.js"></script>
-    <script src="http://pandao.github.io/editor.md/lib/flowchart.min.js"></script>
-    <script src="http://pandao.github.io/editor.md/lib/jquery.flowchart.min.js"></script>
+    <!--<script src="http://pandao.github.io/editor.md/lib/marked.min.js"></script>-->
+    <!--<script src="http://pandao.github.io/editor.md/lib/prettify.min.js"></script>-->
+    <!--<script src="http://pandao.github.io/editor.md/lib/raphael.min.js"></script>-->
+    <!--<script src="http://pandao.github.io/editor.md/lib/underscore.min.js"></script>-->
+    <!--<script src="http://pandao.github.io/editor.md/lib/sequence-diagram.min.js"></script>-->
+    <!--<script src="http://pandao.github.io/editor.md/lib/flowchart.min.js"></script>-->
+    <!--<script src="http://pandao.github.io/editor.md/lib/jquery.flowchart.min.js"></script>-->
 
 
-    <script src="http://pandao.github.io/editor.md/editormd.min.js"></script>
+    <!--<script src="http://pandao.github.io/editor.md/editormd.min.js"></script>-->
 
     <script>
 
