记住我 - 基本实现

--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -79,6 +79,7 @@
                                 </el-input>
                             </el-form-item>
                             <el-form-item>
+                                <div>Remember Me: <input type="checkbox" name="remember-me" /> </div>
                                 <button type="submit" class="el-button login-btn el-button--submit cur"><span>登录</span>
                                 </button>
                                 <input type='hidden' name='time'/>
