--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -13,7 +13,7 @@
         .login-top{text-align: center;}
         .login{position: absolute;top:50%;bottom:0;left: 0;right: 0;margin:-300px auto 0;}
         .logi-t-p{display: inline-block;vertical-align: middle; font-size: 36px;font-weight: normal; color: #fff;}
-        .login-box {width: 500px;/* height: 444px; */height: 400px;margin: 55px auto 0;background: white;}
+        .login-box {width: 500px;/* height: 444px; */height: auto;margin: 55px auto 0;background: white;}
         .login-form .el-form-item__label{display:none;}
         .login-form .el-input__inner {padding-left:38px; height: 46px; line-height: 46px;border: 1px solid #e4e4e4;border-radius: 4px;}
         .login-form button{box-sizing: border-box;display: block; width: 100%;padding: 16px 0;font-size: 16px;color: #fff;background: #2d8cf0;border-radius:4px;transition: .3s; }
@@ -46,7 +46,7 @@
             </div>
             <div class="login-box">
                 <el-tabs v-model="activeName">
-                    <el-tab-pane label="账号登录" name="first">
+                    <el-tab-pane label="芝麻开门" name="first">
                         <el-form label-width="0" class="login-form" id="loginform" th:action="@{/login}"
                                  th:method="post"
                                  >
@@ -79,7 +79,7 @@
                                 </el-input>
                             </el-form-item>
                             <el-form-item>
-                                <div>Remember Me: <input type="checkbox" name="remember-me" /> </div>
+                                <div style="margin-top:-11px;">一天免登录<input type="checkbox" name="remember-me" style="margin-left: 7px;margin-top: -3px;" checked="checked"/> </div>
                                 <button type="submit" class="el-button login-btn el-button--submit cur"><span>登录</span>
                                 </button>
                                 <input type='hidden' name='time'/>
