--- a/src/main/resources/templates/task/taskList.html
+++ b/src/main/resources/templates/task/taskList.html
@@ -50,6 +50,12 @@
                 <el-table-column  label="状态">
                     <template slot-scope="scope">{{scope.row.taskstatusDesc}}</template>
                 </el-table-column>
+                <el-table-column  label="计划开始时间">
+                    <template slot-scope="scope">{{scope.row.model.scheduledstart}}</template>
+                </el-table-column>
+                <el-table-column  label="计划结束时间">
+                    <template slot-scope="scope">{{scope.row.model.scheduledend}}</template>
+                </el-table-column>
                 <el-table-column  label="操作" width="100px">
                     <template slot-scope="scope" >
                         <a v-bind:href="contextRoot+'task/taskAdd?id='+scope.row.model.taskid" class="svg-a" title="编辑">
@@ -97,6 +103,12 @@
                     <el-col :span="7">{{dialogModel.model.scheduledstart}}&nbsp;</el-col>
                     <el-col :span="5">计划结束时间：</el-col>
                     <el-col :span="7">{{dialogModel.model.scheduledend}}</el-col>
+                </el-row>
+                <el-row>
+                    <el-col :span="5">实际开始时间：</el-col>
+                    <el-col :span="7">{{dialogModel.model.realstart}}&nbsp;</el-col>
+                    <el-col :span="5">实际结束时间：</el-col>
+                    <el-col :span="7">{{dialogModel.model.realend}}</el-col>
                 </el-row>
                 <el-row>
                     <el-col :span="24">
