--- a/src/main/resources/templates/project/projectList.html
+++ b/src/main/resources/templates/project/projectList.html
@@ -41,6 +41,19 @@
                 <el-table-column  label="结束时间">
                     <template slot-scope="scope">{{scope.row.endtime}}</template>
                 </el-table-column>
+                <el-table-column  label="项目测试地址">
+                    <template slot-scope="scope">{{scope.row.testurl}}</template>
+                </el-table-column>
+                <el-table-column  label="项目演示地址">
+                    <template slot-scope="scope">{{scope.row.demourl}}</template>
+                </el-table-column>
+                <el-table-column  label="项目线上地址">
+                    <template slot-scope="scope">{{scope.row.onlineurl}}</template>
+                </el-table-column>
+                <el-table-column  label="备注">
+                    <template slot-scope="scope">{{scope.row.note}}</template>
+                </el-table-column>
+
                 <el-table-column  label="操作" width="100px">
                     <template slot-scope="scope" >
                         <a v-bind:href="contextRoot+'project/projectAdd?id='+scope.row.projectid" class="svg-a" title="编辑">
