富文本编辑器（editor.md)全屏后有两个按钮在上面

--- a/src/main/resources/templates/task/taskAdd.html
+++ b/src/main/resources/templates/task/taskAdd.html
@@ -5,7 +5,9 @@
 
     <link rel="stylesheet" th:href="@{/third/editor.md/css/editormd.min.css}" />
     <!--<link rel="stylesheet" href="http://pandao.github.io/editor.md/css/editormd.css" />-->
-
+    <style>
+        .editormd-fullscreen{z-index: 10;}
+    </style>
 </head>
 <body>
 
