--- a/src/main/resources/templates/task/taskAdd.html
+++ b/src/main/resources/templates/task/taskAdd.html
@@ -259,7 +259,7 @@
                 syncScrolling : "single",
                 imageUpload: true,//图片上传功能
                 imageFormats : ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
-                imageUploadURL : "/file/upload",
+                imageUploadURL : contextRoot + "file/upload",
                 path    : "../third/editor.md/lib/",
                 emoji: false,
                 toolbarIcons : function() {
