解决element版本问题

--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- import CSS -->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/element-ui/2.0.7/theme-chalk/index.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/element-ui/2.4.11/theme-chalk/index.css">
     <link rel="stylesheet" th:href="@{/css/main.css}">
     <!-- 引入样式 -->
     <title>登录</title>
@@ -97,7 +97,7 @@
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script th:src="@{/js/iconfont.js}"></script>
 <script src="https://cdn.bootcss.com/vue/2.5.21/vue.min.js"></script>
-<script src="https://unpkg.com/element-ui/lib/index.js"></script>
+<script src="https://cdn.bootcss.com/element-ui/2.4.11/index.js"></script>
 
 <script type="text/javascript"> var contextRoot = "[[@{/}]]"; </script>
 
