--- a/src/main/resources/templates/share/layout.html
+++ b/src/main/resources/templates/share/layout.html
@@ -14,7 +14,7 @@
     </script>
     <!-- import css -->
     <!--<link rel="stylesheet" th:href="@{/css/index.css}">-->
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/element-ui/2.4.11/theme-chalk/index.css">
     <link rel="stylesheet" th:href="@{/css/main.css}">
 
     <style type="text/css">
@@ -29,7 +29,7 @@
     <!--<script th:src="@{/js/vue.js}"></script>-->
     <!--<script th:src="@{/js/index.js}"></script>-->
     <script src="https://cdn.bootcss.com/vue/2.5.21/vue.min.js"></script>
-    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+    <script src="https://cdn.bootcss.com/element-ui/2.4.11/index.js"></script>
     <script th:src="@{/js/base.js}"></script>
 </head>
 <body>
