去除内容大小限制

--- a/src/main/resources/templates/task/taskAdd.html
+++ b/src/main/resources/templates/task/taskAdd.html
@@ -338,8 +338,7 @@
                         { min: 1, max: 50, message: '长度请在 1 到 50 个字符', trigger: 'blur' }
                     ],
                     content:[
-                        { required: true, message: '请输入内容', trigger: 'blur' },
-                        { max: 4000, message: '请不要超过4000字符', trigger: 'blur' }
+                        { required: true, message: '请输入内容', trigger: 'blur' }
                     ]
                 }
             },
