feat: 非前后台项目集成QQ登录（第三方登录成功后，根据返回的用户信息，在自己系统中创建登录信息保存在上下文中）

--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -85,6 +85,7 @@
                                 <input type='hidden' name='time'/>
                                 <input type='hidden' name='md5'/>
 
+                                <a style="color:blue" href="oauth/login/qq">QQ登录</a>
                             </el-form-item>
                         </el-form>
                     </el-tab-pane>
